Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-78043

non-native QFileDialog displaying incorrect mapped network drive names

XMLWordPrintable

    • Windows
    • c0b3c06a7d4f6a2f90742e8dc81c898082a70416 (qt/qtbase/5.14)

      On displaying mapped drive names. Referring attached snapshots, it is
      noticed that mapped drive text displayed in Windows explorer and non-native QT
      file dialog is not exactly same"

        1. Capture1.JPG
          75 kB
          Jukka Palokangas
        2. Capture2.JPG
          37 kB
          Jukka Palokangas
        For Gerrit Dashboard: QTBUG-78043
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            jpalokg2 Jukka Palokangas
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes