QFileDialog: Fix volume name display on Windows

The volume names displayed did not match those of Windows
Explorer; for example "New Volume (X:)" would be displayed for
mapped network drives.

Replace GetVolumeInformation() and manual formatting by the
normal display name of IShellItem.

Fixes: QTBUG-78043
Change-Id: Ia742b7733e8ddc31e9506f15d90d065b985a111d
Reviewed-by: André de la Rocha <andre.rocha@qt.io>